--- a/vignettes/v5-audit-sampling-sample-selection.Rmd
+++ b/vignettes/v5-audit-sampling-sample-selection.Rmd
@@ -1,12 +1,12 @@
 ---
-title: 'Audit sampling: Sample selection'
+title: 'Audit sampling: Selecting a sample'
 author: Koen Derks
 date: 'last modified: 05-11-2022'
 output: 
   rmarkdown::html_vignette:
     toc: true
 vignette: >
-  %\VignetteIndexEntry{Audit sampling: Sample selection}
+  %\VignetteIndexEntry{Audit sampling: Selecting a sample}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteDepends{jfa}
   %\VignetteKeywords{algorithm, audit, method, sampling, selection}
@@ -18,8 +18,6 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE, fig.height = 4, fig.width = 6)
 library(jfa)
 ```
-
-## Audit sampling: Sample selection
 
 Auditors are often required to assess balances or processes that involve a large number of items. Since they cannot inspect all of these items individually, they need to select a subset (i.e., a sample) from the total population to make a statement about a certain characteristic of the population. For this purpose, various selection methodologies are available that have become standard in an audit context. However, in practice it seems that the distinction between sampling methods ---and when to use them--- is not always easy to make. 
 
