--- a/vignettes/v1-audit-sampling.Rmd
+++ b/vignettes/v1-audit-sampling.Rmd
@@ -18,7 +18,7 @@ vignette: >
 library(jfa)
 ```
 
-Welcome to the 'Audit sampling' page of the `jfa` package. Here you can find a simple explanation of the functions in the package that facilitate the statistical audit sampling workflow. Specifically, these functions implement standard audit sampling techniques to calculate sample sizes, select items from a population, and evaluate misstatement in a data sample. The `jfa` package enables users to create a prior probability distribution to perform Bayesian audit sampling using these functions. For more detailed explanations of each function, read the other vignettes on the [package website](https://koenderks.github.io/jfa).
+Welcome to the 'Audit sampling' vignette of the `jfa` package. Here you can find a simple explanation of the functions in the package that facilitate the statistical audit sampling workflow. Specifically, these functions implement standard audit sampling techniques to calculate sample sizes, select items from a population, and evaluate misstatement in a data sample. The `jfa` package enables users to create a prior probability distribution to perform Bayesian audit sampling using these functions. For more detailed explanations of each function, read the other vignettes on the [package website](https://koenderks.github.io/jfa).
 
 ## 1. Cheat sheet
 
@@ -187,8 +187,8 @@ evaluation(materiality = NULL, min.precision = NULL, method = c(
              "rohrbach", "moment", "coxsnell",
              "direct", "difference", "quotient", "regression", "mpu"
            ), alternative = c("less", "two.sided", "greater"), conf.level = 0.95,
-           data = NULL, values = NULL, values.audit = NULL, times = NULL,
-           x = NULL, n = NULL, N.units = NULL, N.items = NULL,
+           data = NULL, values = NULL, values.audit = NULL, strata = NULL, times = NULL,
+           x = NULL, n = NULL, N.units = NULL, N.items = NULL, pool = FALSE,
            r.delta = 2.7, m.type = "accounts", cs.a = 1, cs.b = 3, cs.mu = 0.5,
            prior = FALSE)
 ```
