Add SRA benchmark

--- a/vignettes/v1-audit-sampling.Rmd
+++ b/vignettes/v1-audit-sampling.Rmd
@@ -260,6 +260,7 @@ To validate the statistical results, `jfa`'s automated [unit tests](https://gith
 - [MUS](https://cran.r-project.org/package=MUS) (R package version 0.1.6)
 - [samplingbook](https://cran.r-project.org/package=samplingbook) (R package version 1.2.4)
 - [SMASH21 + SMASH21-Bayes](https://steekproeven.eu/)
+- [SRA](https://www.sra.nl/vaktechniek/accountancy/controle/praktijkhandreikingen/praktijkhandreiking-gegevensgerichte-steekproeven)
 - Touw, P., and Hoogduin, L. (2011). *Statistiek voor audit en controlling*. Boom uitgevers, Amsterdam.
 
 ## 4. Statistical tables
