--- a/vignettes/v3-audit-sampling-bayesian-workflow.Rmd
+++ b/vignettes/v3-audit-sampling-bayesian-workflow.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Audit sampling: Bayesian sampling workflow"
 author: Koen Derks
-date: "last modified: 05-11-2022"
+date: "last modified: 10-11-2022"
 output: 
   rmarkdown::html_vignette:
     toc: true
@@ -27,6 +27,12 @@ library(jfa)
 data("BuildIt")
 ```
 
+<center>
+
+![Figure 1: Illustration of the audit sampling workflow](img/workflow.png)\
+
+</center>
+
 ## Setting up the audit
 
 Laura wants to make a statement that, with 95% confidence, the misstatement in the financial statements is lower than the performance materiality of 5%. Based on last year's audit at BuildIt, where the upper bound of the misstatement turned out to be 2.5%, she wants to tolerate at most 2.5% errors in the intended sample. Laura can therefore re-formulate her statistical statement as that she wants to conclude that, when 2.5% errors are found in her sample, she can conclude with 95% confidence, that the misstatement in the population is lower than the materiality of 5%. Below, Laura defines the materiality, confidence level, and expected errors.
@@ -51,6 +57,12 @@ cr <- 0.6 # 60%
 ```
 
 ## Stage 1: Planning an audit sample
+
+<center>
+
+![Figure 2: The location of the planning stage in the audit sampling workflow](img/planning.png)\
+
+</center>
 
 Laura can choose to either perform a frequentist analysis, where she uses the increased detection risk as her level of uncertainty, or perform a Bayesian analysis, where she captures the information in the control risk in a prior distribution. For this example, we will show how Laura performs a Bayesian analysis. A frequentist analysis can easily be done through the following functions by setting `prior = FALSE`. In a frequentist audit, Laura immediately starts at step 1 and uses the value `adjustedConfidence` as her new value for `confidence`.
 
@@ -102,6 +114,12 @@ plot(stage1)
 
 ## Stage 2: Selecting a sample
 
+<center>
+
+![Figure 3: The location of the selection stage in the audit sampling workflow](img/selection.png)\
+
+</center>
+
 Laura is now ready to select the required 178 transactions from the financial statements. She can choose to do this according to one of two statistical methods. In *record sampling* (`units = "items"`), inclusion probabilities are assigned on the transaction level, treating transactions with a high value and a low value the same, a transaction of $5,000 is equally likely to be selected as a transaction of $1,000. In *monetary unit sampling* (`units = "values"`), inclusion probabilities are assigned on the level of individual monetary units (e.g., a dollar). When a dollar is selected to be in the sample, the transaction that includes that dollar is selected. This favors higher transactions, as a transaction of \$5,000 is five times more likely to be selected than a transaction of \$1,000. 
 
 Laura chooses to use *monetary unit sampling*, as she wants to include more high-valued transactions. The `selection()` function allows her to sample from the financial statements. She uses the `stage1` object as an input for the `selection()` function.
@@ -135,6 +153,12 @@ sample <- stage2$sample
 For this example, the audit values of the sample are already included in the `auditValue` column of the data set .
 
 ## Stage 4: Evaluating the sample
+
+<center>
+
+![Figure 4: The location of the evaluation stage in the audit sampling workflow](img/evaluation.png)\
+
+</center>
 
 Using her annotated sample, Laura can perform her inference with the `evaluation()` function. By passing the `priorResult` object to the function, she automatically sets `method = "binomial"` to be consistent with her prior distribution.
 
