--- a/vignettes/jfa.Rmd
+++ b/vignettes/jfa.Rmd
@@ -24,24 +24,40 @@ This vignette provides a simple explanation of the functionality in the package.
 
 ## Audit sampling
 
+`jfa` provides a user-friendly interface for statistical audit sampling. The standard audit sampling workflow is divided into four distinct parts: planning a sample, selecting the sample from the population, executing the audit and evaluating the misstatement by extrapolating the errors in the sample to the population.
+
 <center>
 
 ![Figure 1: The audit sampling workflow](img/workflow.png)\
 
 </center>
 
+See the package vignette [Audit sampling: Get started](https://koenderks.github.io/jfa/articles/v1-audit-sampling.html) for more details about `jfa`'s audit sampling functionality.
+
+### Functions and intended usage
+
+To illustrate `jfa` statistical audit sampling functionality, consider the `BuildIt` data set that comes with the package. This data consists of 3500 financial statement line items, each of which has a booked value and (for illustrative purposes) a true (audit) value.
+
 ```{r}
 # Load the BuildIt population
 data("BuildIt")
 head(BuildIt)
+```
 
+The first step in the audit sampling workflow is to calculate a minimum required sample size given the purpose of the sample. You can use the sample to 1) obtain evidence for or against the hypothesis that the misstatement in the population is lower than the performance materiality and / or 2) estimate the misstatement in the population. The `planning()` function can be used to calculate this minimum required sample size.
+
+```{r}
 # Stage 1: Planning
 stage1 <- planning(
   materiality = 0.03, expected = 0.01,
   likelihood = "poisson", conf.level = 0.95
 )
 summary(stage1)
+```
 
+The `selection()` function can be used to select the required samples from the population.
+
+```{r}
 # Stage 2: Selection
 stage2 <- selection(
   data = BuildIt, size = stage1,
@@ -49,10 +65,13 @@ stage2 <- selection(
   method = "interval", start = 1
 )
 summary(stage2)
-
 # Stage 3: Execution
 sample <- stage2[["sample"]]
+```
 
+The `evaluation()` function can be used to evaluate the misstatement in the sample.
+
+```{r}
 # Stage 4: Evaluation
 stage4 <- evaluation(
   materiality = 0.03, method = "stringer",
@@ -64,6 +83,12 @@ summary(stage4)
 
 ## Data auditing
 
+The `digit.test()` function can be used to test the distribution of leading or last digits in a variable against a pre-specified distribution (e.g., Benford's law).
+
+See the package vignette [Data auditing: Get started](https://koenderks.github.io/jfa/articles/v8-data-auditing.html) for more details about `jfa`'s data auditing functionality.
+
+### Functions and intended usage
+
 ```{r}
 # Digit distribution test
 x <- digit.test(sinoForest$value, check = "first", reference = "benford")
@@ -71,6 +96,7 @@ print(x)
 plot(x)
 ```
 
+The `repeated.test()` function can be used to test the numbers in a variable for repeated values.
 
 ```{r}
 # Repeated values test
